# badminton_stroke_classification

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  HANDOVER.md  MODELS.md  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-quality.yml
clips_local/: README.md
data/: ATTRIBUTION.md  youtube_durations.csv
data/shuttleset/: compute_clip_length_stats.py  video_metadata.csv
docs/: api_contract.md  bric_training_design.md  ci.md  decisions_log.md  gpu-access.md  models_registry.yaml  storage.md  training_env_setup.md
docs/architecture_notes/: architecture_1_bst_3dcnn_racket_extension_09_April.md  architecture_2_research_10_April.md  augmentation_framework.md  bst_x_issues_and_bugs_squashed.md  bst_x_overview.md  bst_x_overview_technical_appendix.md  bst_x_wd_sweep.md  class_f1_focal_design.md  class_player_split_overlap_exploration.md  collation_taxon_pin_w_preds_refactor.md  collation_taxon_pin_w_preds_refactor_log.md  discard_flags_split_v2_dropunk_nosides.csv  focal_alpha_revert_sketch.md  frame_recovery_stats.md  historical_bst.md  hp_and_aug_speculations_30_05_2026.md  hparam_search_wrapper.md  hparams_sweep_speculations.md  model_capacity_bottleneck_question.md  namespace_migration_test_design.md  pipeline_context_notes.md  player_overlap_analysis.py  pre_phase_2_review_2026-04-26.md  pre_phase_2_tidy_plan.md  seesaw_f1_focal_design.md  shuttle_mask_archive.md  train_val_test_split_analysis.md  unknown_channel_fix_review.md  where_to_next_tri.md  xai_vid_feature.md
experiments/bst_x/: bst_x_training_runs.md  build_training_runs_table.py
frontend/: Dockerfile  index.html  package-lock.json  vite.config.js
frontend/hba-stroke-classifier/: HBA Stroke Classifier.html  README.md  app.jsx  configure-screen.jsx  evaluation-screen.jsx  library-screen.jsx  markup-screen.jsx  progress-screen.jsx  project-content.js  project-screen.jsx  results-screen.jsx  shared.jsx  styles.css
frontend/src/: README.md  app.jsx  configure-screen.jsx  library-screen.jsx  main.jsx  markup-screen.jsx  model-results-screen.jsx  progress-screen.jsx  results-screen.jsx  shared.jsx  styles.css
nginx/: nginx.conf
notebooks/: 01_shuttleset_eda_v3.ipynb  02_revised_splits.ipynb  03_build_clips_master.ipynb  03_feature_validation.ipynb  clips_master.csv  shuttleset_splits.csv
runtime/: README.md
scratch/: NEXT_SESSION.md  README.md  bst_x_training_runs.md  build_training_runs_table.py  collation_taxon_pin_w_preds_refactor.md  collation_taxon_pin_w_preds_refactor_log.md  frame_recovery_stats.md  frontend-model-label-fixes.md  frontend_integration_handoff.md  hpc_quickstart.md  registry_conflict_resolve.md  scratch_layout.md  taxon_pin_w_preds_tldr.md  tier1_integration_status_14_05_26.md
scratch/api_mocks/: build_mock_artifacts.py
scratch/architecture_notes/: arch_1_directions.md  architecture_2_research_10_April.md  augmentation_framework.md  bst_x_issues_and_bugs_squashed.md  bst_x_overview.md  bst_x_overview_technical_appendix.md  bst_x_sweep_summary_wd_x_focal_alpha_revert.md  bst_x_wd_sweep.md  busted_hit_zone_clips_phase1.txt  busted_whole_clips_phase1.txt  calibration_ece.py  class_f1_focal_design.md  frame_zeroing.md  historical_bst.md  hp_and_aug_speculations_30_05_2026.md  hparam_search_wrapper.md  hparams_sweep_speculations.md  model_capacity_bottleneck_question.md  namespace_migration_test_design.md  nosides_runs_table.md  pre_phase_2_review_2026-04-26.md  pre_phase_2_tidy_plan.md  seesaw_f1_focal_design.md  train_val_test_split_analysis.md  transformer_widening_hparam_changes.md  unknown_channel_fix_review.md  where_to_next_tri.md  where_to_next_tri_one_pager.md  xai_vid_feature.md
scratch/inspect_clips/: fill_remaining.py  handoff_report.md  rebuild_real.py  remap.py  stems.txt
scratch/post_tidy_smoke/: README.md  smoke_infer_bit_exact.py  smoke_prepare_2d_bit_exact.py
scratch/presentation_prep/: RETIRED_eval_dump_predictions.md  bar_chart_per_class_f1.py  bar_chart_per_class_f1_final.py  class_size_vs_val_f1.py  confusion_matrix.py  eval_dump_predictions.py  f1_runs_bar_charts.py  trajectory_chart.py  trajectory_chart_macro_and_min.py
scratch/project_history/: README.md
scratch/rebrand_smoke/: README.md  artefact_inventory.py
scratch/research/: class_player_split_overlap_exploration.md  dump_videos_len.py
scratch/task-breakdown/: task_breakdown_weeks3_4.md
scripts/: bric_smoke_test.py  build_extract_stems.py  build_match_manifest.py  build_shots_master.py  compute_val_metrics.py  dev-setup.sh  estimate_shuttle_oob_rate.py  evaluate_shuttle.py  example_mlflow_run.py  extract_frames.py  extract_frames_retry.py  extract_shuttle.py  fetch-models.sh  fetch_runtime_weights.sh  gen-requirements.sh  model_manifest.tsv  pr_advisory.py  pr_main_files.py  preprocess_videos.py  publish-models.sh  rename_videos.py  setup_data.sh  slice_rallies.py  symlink_merge_phase1.py  validate_rgb.py  validate_videos.py  verify_flatten.py
scripts/api_fixtures/: README.md  build_mock_artifacts.py  e2e.py  handoff_report.md  rebuild_real.py
scripts/archive/: dump_videos_len.py  symlink_merge_phase1.py  test_clip_index.py  verify_collated_counts.py  verify_v1_collate.py
scripts/bric/: evaluate_shuttle.py  extract_shuttle.py  preprocess_videos.py  smoke_test.py  validate_rgb.py
scripts/plots/: bar_chart_overall_shuttleset_comparison.py  bar_chart_per_class_f1_final.py  class_size_vs_val_f1.py  (+3 more)
tests/: test_active_classes.py  test_adaptive_focal.py  test_api.py  test_api_inference.py  test_api_registry.py  test_augmentations.py  test_data_access.py  test_dataset.py  test_hparam_sweep.py  test_inference_smoke.py  test_integration.py  test_namespace_migration.py  test_network.py  test_player_mapping.py  test_remote_preflight.py  test_sticky_anchor.py  test_taxonomy.py  test_temporal.py  test_train_surface.py  test_video_io.py  testing_guide.md
training/: README.md
(+999 files in other folders)
