[project]
name = "badminton-stroke-classification"
version = "0.1.0"
description = "Capstone — BST + BRIC stroke classifiers and supporting pipeline."
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# Shared base — installed by every `uv sync`.
# These deps are needed by every architecture (BRIC, BST handler) as well as
# the FastAPI backend. Architecture-specific deps go in the extras groups
# below.
#
# Compatible coexistence notes:
#   - BRIC and BST inference handlers can share one venv. Both use PyTorch,
#     TrackNetV3, opencv, fastapi.
#   - **MMPose is the exception.** Its numpy<2 ceiling forces isolation; the
#     BST pipeline's existing pattern is to call MMPose-using code via
#     subprocess (see src/bst_refactor/pipeline/shuttle_extractor.py and
#     stroke_classification/preparing_data/). That subprocess venv is
#     managed separately from this pyproject.
#   - Therefore numpy>=2 is fine for everything in this pyproject. Modern
#     TrackNetV3 (per the vendored requirements.txt header) supports it.
#
# Install patterns:
#   - BRIC training:                     uv sync --extra bric --extra dev
#   - BRIC inference only:               uv sync --extra bric-runtime
#   - Unified API server (both arches):  uv sync --extra bric-runtime --extra bst-runtime
#   - Dev tooling only (lint / tests):   uv sync --extra dev
# ---------------------------------------------------------------------------
dependencies = [
    # Core ML — both architectures are PyTorch models
    "torch>=2.5",
    "torchvision",
    # Numerics
    "numpy",
    "pandas",
    "scipy",
    # Video / image I/O
    "opencv-python",
    "Pillow",
    # Vendored TrackNetV3 runtime deps (both arches do shuttle tracking)
    "tqdm",
    "parse",
    "pycocotools",     # used by TrackNetV3 inference_utils; if the ARM64 wheel install fails, patch and drop
    # Config
    "pyyaml",
    # API serving — FastAPI is small enough to be base; lets the API skeleton
    # boot even without architecture-specific extras (returns mock results).
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]

# BRIC handler runtime deps for inference (R(2+1)D-18 load + YOLO11 player
# tracking + per-stroke prediction). R(2+1)D-18 ships in torchvision
# (already a base dep) so no extra ML lib is needed beyond ultralytics.
bric-runtime = [
    "ultralytics>=8.3",   # YOLO11 player detection + built-in tracker
    "lap>=0.5.12",        # ByteTrack uses Jonker-Volgenant assignment; not a
                          # hard dep of ultralytics, but model.track() crashes
                          # without it. Declared explicitly so uv installs it
                          # and ultralytics' pip-based auto-installer never
                          # fires (uv venvs don't ship pip).
]

# BRIC training-only adds (not needed at inference).
bric-train = [
    "transformers",   # HF get_cosine_schedule_with_warmup; matches BST's pattern
    "torcheval",      # multiclass_f1_score for per-epoch val metrics
    # Future candidates: wandb / mlflow / aim for experiment tracking,
    # kornia for GPU augmentations, etc.
]

# Convenience meta-extras: install both bric-runtime and bric-train.
# Use this for training (`uv sync --extra bric --extra dev`).
bric = [
    "badminton-stroke-classification[bric-runtime,bric-train]",
]

# BST handler runtime deps for the unified API server.
#
# **Pre-populated as a starting guess** from the project's existing
# requirements.txt (which is BST's source of truth). Comments mirror the
# usage notes from that file. The BST pipeline owner should prune this
# down to inference-only deps once the handler is wired — training-only
# tooling (tensorboard, mlflow, matplotlib, etc.) can move to a future
# `bst-train` extras group.
#
# MMPose deliberately omitted — runs via subprocess into its own venv,
# per the BST pipeline's existing isolation pattern.
bst-runtime = [
    "positional-encodings",   # BST transformer model uses these (tempose.py)
    "torchinfo",              # Model summary utility (imported by tempose.py)
    "torcheval",              # multiclass_f1_score; may be used at eval time
    "transformers",           # HF cosine LR schedule (training); in case shared modules import
    "tensorboard",            # SummaryWriter; module-load import in bst_train.py
    "mlflow",                 # Experiment tracking
    "scikit-learn",           # Eval / preprocessing utilities
    "matplotlib",             # Plots; rarely needed at inference, BST owner can drop
]

# Dev tooling.
dev = [
    "pytest",
    "httpx",
    "ipython",
    "ruff",   # configured in [tool.ruff] below; invoke via `uv run ruff check`
]

# uv-managed PyTorch sources: on Linux, pull torch + torchvision from
# PyTorch's CUDA wheel index so we get prebuilt CUDA wheels (works for
# both x86_64 and aarch64). On macOS, uv falls back to the default PyPI
# wheels (MPS-capable on Apple Silicon).
#
# cu128 is the default — recent enough to support current-generation
# GPUs. If your training host has a different CUDA driver version, pick
# the matching index — see docs/training_env_setup.md for the table.
# Available channels include cu121, cu124, cu126, cu128, plus nightly:
#   url = "https://download.pytorch.org/whl/nightly/cu128"
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]

[tool.ruff]
exclude = [
    "notebooks/",
    "**/deprecated/",
    "src/bst_refactor/TrackNetV3/",
    "src/perception/_vendor/",   # All vendored upstream code (currently TrackNetV3)
    "scratch/project_history/",
]

[tool.ruff.lint]
ignore = [
    "F541",  # f-string without placeholders
    "E401",  # multiple imports on one line
    "E731",  # lambda assignment
    "E702",  # multiple statements on one line (semicolon)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
